<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 marlonlom.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/label_settings_group_general">

        <ListPreference
            app:dialogTitle="@string/label_settings_dark_theme_dialog_title"
            app:entries="@array/entries_for_dark_theme_setting"
            app:entryValues="@array/entry_values_for_dark_theme_setting"
            app:iconSpaceReserved="false"
            app:key="preference_key_dark_theme"
            app:title="@string/label_settings_dark_theme_title"
            app:useSimpleSummaryProvider="true"
            tools:defaultValue="light" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/label_settings_group_help">
        <Preference
            app:iconSpaceReserved="false"
            app:key="preference_key_feedback"
            app:summary="Report technical issues or suggest new features"
            app:title="Send feedback">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://itbook.store/feedback" />
        </Preference>
        <Preference
            app:iconSpaceReserved="false"
            app:key="preference_key_privacy_policy"
            app:title="Privacy policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://itbook.store/privacypolicy" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/label_settings_group_about">
        <Preference
            app:iconSpaceReserved="false"
            app:key="preference_key_version"
            app:summary="1.0.0"
            app:title="@string/label_settings_version_title" />
    </PreferenceCategory>

</PreferenceScreen>