<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 marlonlom.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_bookstore"
    app:startDestination="@id/screen_home">

    <fragment
        android:id="@+id/screen_home"
        android:name="dev.marlonlom.apps.bookbar.home.HomeFragment"
        android:label="@string/destination_label_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/goto_categories_browse"
            app:destination="@id/screen_categories_browse" />
        <action
            android:id="@+id/goto_released_book_details"
            app:destination="@id/screen_book_details" />
        <action
            android:id="@+id/goto_book_search"
            app:destination="@id/screen_searched_books" />
    </fragment>

    <fragment
        android:id="@+id/screen_categories_browse"
        android:name="dev.marlonlom.apps.bookbar.categories.BrowseCategoriesFragment"
        android:label="@string/destination_label_categories_browse"
        tools:layout="@layout/fragment_categories_browse">
        <action
            android:id="@+id/goto_book_category_search"
            app:destination="@id/screen_searched_books" />
    </fragment>

    <fragment
        android:id="@+id/screen_searched_books"
        android:name="dev.marlonlom.apps.bookbar.search.BooksSearchFragment"
        android:label="@string/destination_label_book_search"
        tools:layout="@layout/fragment_books_search">
        <argument
            android:name="book_text"
            android:defaultValue="none"
            app:argType="string" />
        <action
            android:id="@+id/goto_searched_book_details"
            app:destination="@id/screen_book_details" />
    </fragment>

    <fragment
        android:id="@+id/screen_saved_books"
        android:name="dev.marlonlom.apps.bookbar.saved.SavedBooksFragment"
        android:label="@string/destination_label_saved_books"
        tools:layout="@layout/fragment_books_saved">
        <action
            android:id="@+id/goto_saved_book_details"
            app:destination="@id/screen_book_details" />
    </fragment>

    <fragment
        android:id="@+id/screen_book_details"
        android:name="dev.marlonlom.apps.bookbar.detail.BookDetailsFragment"
        android:label="@string/destination_label_book_details"
        tools:layout="@layout/fragment_book_details">
        <argument
            android:name="book_isbn"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/screen_settings"
        android:name="dev.marlonlom.apps.bookbar.settings.SettingsFragment"
        android:label="@string/destination_label_settings"
        tools:layout="@layout/layout_preferences" />

</navigation>